[tool.poetry]
name = "projekti"
version = "0.1.0"
description = "viikko 2"
authors = ["h4lk0 <jenni.e.halkola@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
